syntax = "proto3";

package invitations.messages.v1;

option go_package = "messages/v1";

message AcceptInvitationResponse {}
